--- a/20-overview.qmd
+++ b/20-overview.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting")  # drafting, polishing, complete
+status("drafting", "2022-12-21", section = "Overview")  # drafting, polishing, complete
 ```
 
 This section gets readers familiar with X-13ARIMA-SEATS.
