--- a/21-history.qmd
+++ b/21-history.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting")  # drafting, polishing, complete
+status("drafting", "2022-12-21", section = "History")  # drafting, polishing, complete
 ```
 <!--
 -   History of the software
