--- a/31-holidays.qmd
+++ b/31-holidays.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting")  # drafting, polishing, complete
+status("drafting", "2022-01-21", section = "Holidays")  # drafting, polishing, complete
 ```
 
 -   Why should we adjust for holiday effects
