better file names

--- a/41-presence-of-seasonality.qmd
+++ b/41-presence-of-seasonality.qmd
@@ -1,4 +1,5 @@
-## Should a series be seasonally adjusted at all?
+## Presence of seasonality
+
 
 ```{r}
 #| results: "asis"
@@ -6,6 +7,8 @@
 source("_common.R")
 status("drafting")  # drafting, polishing, complete
 ```
+
+Should a series be seasonally adjusted at all?
 
 X-13AS removes seasonality from series, even if a series is not seasonal from the beginneing.
 If a series is not seasonal, the resulting series may be bad.
