--- a/11-introduction.qmd
+++ b/11-introduction.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-append_df(refresh = TRUE)
+ans <- append_df(refresh = TRUE)
 status("polishing", "2022-12-21", section = "A minimal example")  # drafting, polishing, complete
 ```
 
