--- a/24-x11.qmd
+++ b/24-x11.qmd
@@ -5,34 +5,40 @@
 #| echo: false
 source("_common.R")
 status("polishing", "2022-12-21", section = "X11")  # drafting, polishing, complete
+library(seasonal)
 ```
 
-
+```{=html}
 <!--
 -   How to use the X11 spec
 
 -   Case Study: Changing the length of trend and/or seasonal filter
 
  -->
-One of the two main methods available in X-13ARIMA-SEATS to extract trend and seasonal components is the \`\`X-11'' method.
+```
+One of the two main methods available in X-13ARIMA-SEATS to extract trend and seasonal components is the X-11 method.
 This is a nonparametric procedure that works by passing moving-average filters over the data to extract intended components.
+
 In order to use symetric moving average filters at the end of the time series (current value), a regARIMA model is used to forecast extend the series.
 This RegARIMA model is where users can test for or specify outliers, trading day and moving holiday regressors in their adjustment.
 The forecast extended series is then used to filter.
+
 Additionally, X-11 has a built in extreme value procedure included.
 This procedure identifies extremes and replaces.
 This results in a robust procedure that can automatically choose filters and identify extreme values without much user intervention.
-All that needs to be evoked beyond the default 'seas()' call is to turn on the X11 spec option.
+All that needs to be evoked beyond the default `seas()` call is to turn on the X11 spec option.
 
 ```{r}
-library(seasonal)
 m <- seas(AirPassengers, x11 = "")
+summary(m)
 ```
 
 Before further discussion about the details of the X-11 process, let us see what happened during this modeling run...
 
 When using the x11 spec you can change the length of the filter used for the trend and seasonal components with the `trendma` and `seasonalma` arguments respectively.
 Additionally, `sigmalim` will control the amount of extreme value adjustment that is done during the seasonal adjustment.
+
+## Additive and multiplicative (again)
 
 The X-13ARIMA-SEATS development was highly motivated to study economic time series.
 As such, the default seasonal adjustment mode is multiplicative due to most seasonal economic time series displaying seasonal fluctuations that increase and decrease along with the level of the time series.\
@@ -46,23 +52,50 @@ If your series has some extremely small values in certain months (quarters) then
 It has been observed that when multiplicative seasonal adjustment produces more extreme values in conjunction with small seasonal factors then pseudo-additive adjustment should be explored.
 NEED TO SHOW USERS HOW TO VIEW THEIR EXTREME VALUES - D8.B TABLE DESIGNATIONS NEXT TO OBSERVATIONS. A good reference on the subject is Baxter (1994).
 
+## Filter length
+
 The X11 spec also allows users to control the length of the trend and seasonal moving average filters used during the adjustment.
 Generally speaking, longer filters imply a more stable seasonal component and shorter filters a more changing seasonal pattern.
 Of course, a longer filter will use more data for the caluclation of components at each time point.
 This is an important observation and understanding it might help a user decide on a short or long filter.
 Since longer filters use more data there tend to be smaller revisions when a new data point is added.
 However, there will be revisions to data values further back.
+
 A shorter filter is just the opposite, they tend to produce smaller revisions but they do not extend as far back into the series.
 If a filter is not choosen by the user then automatic filter selection is used.
 To understand the length of a filter let's look at the (finite) number of choice available in during an x11 adjustment.
-There are different filters used for the seasonal component and the trend component.
+@tbl-x11-filters shows the different filters available for the seasonal component and the trend component.
 
-| Seasonal Filter | Description                                                                                                                                                                                                                     |
-|-----------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| s3x1            | 3x1 moving average                                                                                                                                                                                                              |
-| s3x3            | 3×3 moving average.                                                                                                                                                                                                             |
-| s3x5            | 3×5 moving average                                                                                                                                                                                                              |
-| s3x9            | 3×9 moving average                                                                                                                                                                                                              |
-| s3x15           | 3×15 moving average                                                                                                                                                                                                             |
-| stable          | Stable seasonal filter. A single seasonal factor for each calendar month or quarter is generated by calculating the simple average of all the values for each month or quarter (taken after detrending and outlier adjustment). |
-| x11default      | A 3×3 moving average is used to calculate the initial seasonal factors in each iteration, and a 3×5 moving average to calculate the final seasonal factors.                                                                     |
+| Value        | Description                                                                                                                                                                                                                     |
+|--------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `s3x1`       | 3×1 moving average                                                                                                                                                                                                              |
+| `s3x3`       | 3×3 moving average                                                                                                                                                                                                              |
+| `s3x5`       | 3×5 moving average                                                                                                                                                                                                              |
+| `s3x9`       | 3×9 moving average                                                                                                                                                                                                              |
+| `s3x15`      | 3×15 moving average                                                                                                                                                                                                             |
+| `stable`     | Stable seasonal filter. A single seasonal factor for each calendar month or quarter is generated by calculating the simple average of all the values for each month or quarter (taken after detrending and outlier adjustment). |
+| `x11default` | A 3×3 moving average is used to calculate the initial seasonal factors in each iteration, and a 3×5 moving average to calculate the final seasonal factors.                                                                     |
+
+: Filters available in X11 {#tbl-x11-filters tbl-colwidths="\[30,70\]"}
+
+## Extrem value
+
+::: callout-warning
+## Related concept: Outlier
+
+FIXME: explain how this is related to transform.
+:::
+
+## Case study
+
+```{r}
+
+tsbox::ts_plot(
+  s3x1 = predict(seas(AirPassengers, x11.seasonalma = "s3x1")),
+  s3x15 = predict(seas(AirPassengers, x11.seasonalma = "s3x15"))
+)
+
+
+
+
+```
