--- a/22-transform.qmd
+++ b/22-transform.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("polishing", "2022-12-21", section = "Transform")  # drafting, polishing, complete
+status("drafting", "2022-12-21", section = "Transform")  # drafting, polishing, complete
 ```
 
 ```{=html}
