--- a/23-regARIMA.qmd
+++ b/23-regARIMA.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("polishing", "2022-12-21", section = "regARIMA Model")  # drafting, polishing, complete
+status("drafting", "2022-12-21", section = "regARIMA Model")  # drafting, polishing, complete
 ```
 
 <!-- - Idea of regARIMA -->
