--- a/43-indirect-vs-direct.qmd
+++ b/43-indirect-vs-direct.qmd
@@ -1,4 +1,4 @@
-## Indirect vs direct adjustment
+## Indirect vs direct adjustment {#sec-indirect-vs-direct-adjustment}
 
 ```{r}
 #| results: "asis"
