--- a/10-introduction.qmd
+++ b/10-introduction.qmd
@@ -72,4 +72,13 @@ In its most recent version, X-13 offers these two seasonal adjustment methods in
 The National Bank of Belgium has created an alternative Java-based implementation called JDemetra+ [@eurostat17] which is also widely deployed by statistical agencies.
 One of either the TRAMO-SEATS or X-11 method of seasonal adjustment is used by almost all (government) statistical offices throughout the world.
 
+## Acknowledgements {.unnumbered}
+
+We are indebted to the the United States Census Bureau, for X-13ARIMA-SEATS and support for research around the software.
+Help and support by Brian Monsell is particularily acknowledged.
+
+seasonal was originally developed for use at the Swiss State Secretariat of Economic Affairs.
+It has been greatly improved over time thanks to suggestions and support from Matthias Bannert, Freya Beamish, Vidur Dhanda, Alain Galli, Ronald Indergand, Preetha Kalambaden, Stefan Leist, James Livsey, Pinaki Mukherjee, Bruno Parnisari and many others.
+The related work on the x13binary package facilitated (automated) deployment thanks to the R package system, CRAN as well as GitHub for the x13prebuilt repository.
+
 ## References {.unnumbered}
